[gd_scene load_steps=14 format=2]

[ext_resource path="res://CharacterSheet/FrontPage.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Neuro Font PL.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://CharacterSheet/CharacterSheet.gd" type="Script" id=4]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.997151, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 3 )

[node name="CharacterSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="PanelContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.294118 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 8 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 650.0
rect_clip_content = false

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 952.0
margin_bottom = 1400.0
rect_min_size = Vector2( 0, 1400 )
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Panel" type="MarginContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.013
anchor_right = 0.5
anchor_bottom = 0.013
margin_left = -476.0
margin_top = -18.2
margin_right = -63.0
margin_bottom = 252.8
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel"]
margin_right = 413.0
margin_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer"]
margin_right = 413.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.23

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer"]
margin_top = 20.0
margin_right = 413.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.94

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 18.0
margin_right = 148.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.64
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 403.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 16.76

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 251.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 251.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.14

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.38

[node name="Name" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 209.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.06
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 213.0
margin_right = 251.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 251.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.32

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 251.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 40.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65

[node name="Ethnicity" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 44.0
margin_right = 251.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.38
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
scroll_active = false

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 251.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.41

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 251.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 26.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.6

[node name="EthnicityTrait" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 30.0
margin_right = 230.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.91
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
scroll_active = false

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 234.0
margin_right = 251.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control5" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 251.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.59

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 413.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 413.0
margin_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.53

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2"]
margin_right = 413.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2"]
margin_top = 4.0
margin_right = 413.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.14

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 48.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.31

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 52.0
margin_right = 187.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.68
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 191.0
margin_right = 217.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.69

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 221.0
margin_right = 372.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.1
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 376.0
margin_right = 413.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2"]
margin_top = 49.0
margin_right = 413.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 119.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.13

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 123.0
margin_right = 352.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.09
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 356.0
margin_right = 413.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/TextureRect/Panel/VBoxContainer/VBoxContainer2"]
margin_top = 93.0
margin_right = 413.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="CloseButton" type="Button" parent="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -33.0
margin_right = -3.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 9 )
text = "X"

[connection signal="button_up" from="PanelContainer/CloseButton" to="." method="_on_CloseButton_button_up"]
